# roguelike_test

./: CMakeLists.txt  Character.cpp  Character.h  Class.cpp  Class.h  Item.h  Map.cpp  Map.h  Parser.cpp  Parser.h  README.md  Skill.cpp  Skill.h  main.cpp
Actor/: Actor.cpp  Actor.h  Attribute.h  Character.cpp  Character.h  NPC.cpp  NPC.h
DOCS/: Naming convention
Game/: Actions.cpp  Actions.h  Game.cpp  Game.h  Input.cpp  Map.h
Item/: Armor.cpp  Armor.h  Artifact.cpp  Artifact.h  Item.cpp  Item.h  Weapon.cpp  Weapon.h
Utility/: chance.hpp  constants.h
src/Actions/: Actions.cpp  Actions.h  ComplexActions.cpp  ComplexActions.h
src/Actor/: Actor.cpp  Actor.h  Attribute.cpp  Character.cpp  Character.h  NPC.h
src/Game/: Cell.cpp  Cell.h  Game.cpp  Game.h  Input.h  Map.cpp  Map.h
src/Item/: Armor.h  Artifact.cpp  Consumable.h
src/Utility/: Parser.cpp  Parser.h
src/Utility/jsonMaker/: jsonMaker.cpp  jsonMaker.h
